<?xml version="1.0"?>
 <package>
   <name>knowrob_gui</name>
  <version>0.1.0</version>
  <description>Components for editing semantic environment maps and action recipes.</description>
  <maintainer email="tenorth@cs.uni-bremen.de">Moritz Tenorth</maintainer>
  <author>Moritz Tenorth</author>

  <license>LGPL</license>
  <url type="website">http://knowrob.org/doc/semantic_map_editor</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rosjava_build_tools</build_depend>
  <build_depend>knowrob_common</build_depend>
  <build_depend>knowrob_cad_parser</build_depend>

  <run_depend>knowrob_common</run_depend>
  <run_depend>knowrob_cad_parser</run_depend>

</package>
